--- a/ScalableStorageService/.project
+++ b/ScalableStorageService/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ScalableStorageService</name>
+	<name>ScalableStorageServicev1.2</name>
 	<comment></comment>
 	<projects>
 	</projects>
